--- a/notebooks/iomega-workflow2-split_data_into_subsets.ipynb
+++ b/notebooks/iomega-workflow2-split_data_into_subsets.ipynb
@@ -19,8 +19,7 @@
     "import sys\n",
     "\n",
     "ROOT = os.path.dirname(os.getcwd())\n",
-    "path_data = os.path.join(ROOT, 'data')\n",
-    "sys.path.insert(1, ROOT)"
+    "path_data = os.path.join(ROOT, 'data')"
    ]
   },
   {
@@ -32,26 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyteomics'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-36084df4f8dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Load fully processed dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmatchms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimporting\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_data\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'gnps_all_cleand_by_matchms_and_pubchem_lookups.json'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mreference_spectrums\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_from_json\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\OneDrive - Netherlands eScience Center\\Project_Wageningen_iOMEGA\\matchms-dev\\matchms\\matchms\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mexporting\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfiltering\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mimporting\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msimilarity\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\OneDrive - Netherlands eScience Center\\Project_Wageningen_iOMEGA\\matchms-dev\\matchms\\matchms\\exporting\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0msave_as_json\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msave_as_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0msave_as_mgf\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msave_as_mgf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m __all__ = [\n",
-      "\u001b[1;32mC:\\OneDrive - Netherlands eScience Center\\Project_Wageningen_iOMEGA\\matchms-dev\\matchms\\matchms\\exporting\\save_as_mgf.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpyteomics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmgf\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpy_mgf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msave_as_mgf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspectrums\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \"\"\"Save spectrum(s) as mgf file.\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyteomics'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load fully processed dataset\n",
     "from matchms.importing import load_from_json\n",
@@ -123,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matchms.exporting.save_as_json import save_as_json\n",
+    "from matchms.exporting import save_as_json\n",
     "\n",
     "filename = os.path.join(path_data,'gnps_positive_ionmode_cleaned_by_matchms_and_lookups.json')\n",
     "save_as_json(reference_spectrums_positive, filename)"
@@ -144,7 +128,7 @@
    ],
    "source": [
     "# or load results\n",
-    "\"\"\"from matchms.importing.load_from_json import load_from_json\n",
+    "\"\"\"from matchms.importing import load_from_json\n",
     "\n",
     "filename = os.path.join(path_data,'gnps_positive_ionmode_cleaned_by_matchms_and_lookups.json')\n",
     "reference_spectrums_positive = load_from_json(filename)\"\"\""
@@ -154,7 +138,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select subset of unique inchikeys"
+    "### Select subset of unique InchiKeys\n",
+    "Create strongly reduced dataset to limit computation times for benchmarking.\n",
+    "For every unique InchiKey (only considering first 14 characters), only one spectrum will be picked. In cases where many spectra exit for the same InchiKey, the one with most peaks above an relative intensity threshold is selected."
    ]
   },
   {
@@ -204,6 +190,13 @@
    ],
    "source": [
     "len(inchikey_collection)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Actual picking of the unique InchiKey spectra"
    ]
   },
   {
@@ -326,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matchms.exporting.save_as_json import save_as_json\n",
+    "from matchms.exporting import save_as_json\n",
     "\n",
     "filename = os.path.join(path_data,'gnps_positive_ionmode_unique_inchikey_cleaned_by_matchms_and_lookups.json')\n",
     "save_as_json(spectrums_unique_inchikeys_positive, filename)"
@@ -349,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
