--- a/notebooks/iomega-workflow4-fingerprint-based-similarities.ipynb
+++ b/notebooks/iomega-workflow4-fingerprint-based-similarities.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,102 +133,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Calculate similarity score matrices\n",
-    "+ Similarities between all possible pairs of spectra will be calculated. This will give a similarity score matrix of size 12,797 x 12,797."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-4143bd158f1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msimilarity_measure\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFingerprintSimilarityParallel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimilarity_measure\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"jaccard\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mscores_mol_similarity\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msimilarity_measure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspectrums\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspectrums\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\onedrive - netherlands escience center\\project_wageningen_iomega\\matchms-dev\\matchms\\matchms\\similarity\\FingerprintSimilarityParallel.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, references, queries)\u001b[0m\n\u001b[0;32m     57\u001b[0m             similarity_matrix[numpy.ix_(idx_fingerprints1,\n\u001b[0;32m     58\u001b[0m                                         idx_fingerprints2)] = jaccard_similarity_matrix(fingerprints1,\n\u001b[1;32m---> 59\u001b[1;33m                                                                                         fingerprints2)\n\u001b[0m\u001b[0;32m     60\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msimilarity_measure\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"dice\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m             similarity_matrix[numpy.ix_(idx_fingerprints1,\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
-   "source": [
-    "from matchms.similarity import FingerprintSimilarityParallel\n",
-    "\n",
-    "similarity_measure = FingerprintSimilarityParallel(similarity_measure=\"jaccard\")\n",
-    "scores_mol_similarity = similarity_measure(spectrums, spectrums)\n",
-    "#start 21:53\n",
-    "import numpy as np\n",
-    "filename = os.path.join(path_data, \"similarities_daylight2048_jaccard.npy\")\n",
-    "np.save(filename, scores_mol_similarity)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-cada4595e0f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspec2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspectrums\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mspec1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"fingerprint\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mspec2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"fingerprint\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m             \u001b[0mu_or_v\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbitwise_or\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspec1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"fingerprint\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspec2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"fingerprint\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mu_or_v\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mu_or_v\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "for i, spec1 in enumerate(spectrums):\n",
-    "    for j, spec2 in enumerate(spectrums[i:], i):\n",
-    "        if spec1.get(\"fingerprint\") is not None and spec2.get(\"fingerprint\") is not None:\n",
-    "            u_or_v = np.bitwise_or(spec1.get(\"fingerprint\") != 0, spec2.get(\"fingerprint\") != 0)\n",
-    "            if u_or_v.sum() < 1:\n",
-    "                print(i, j, u_or_v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2259, 8395)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i, j\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores_mol_similarity = similarity_measure(spectrums[11134:11136], spectrums[11144:11146])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,8 +142,7 @@
      "output_type": "stream",
      "text": [
       "543 no fingerprint\n",
-      "1246 no fingerprint\n",
-      "11145 weird\n"
+      "1246 no fingerprint\n"
      ]
     }
    ],
@@ -251,29 +156,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ZXJXZNDDNMQXFV\n",
-      "VEXZGXHMUGYJMC\n"
-     ]
-    }
-   ],
    "source": [
-    "from matchms.utils import mol_converter\n",
+    "# Calculate similarity score matrices\n",
+    "+ Similarities between all possible pairs of spectra will be calculated. This will give a similarity score matrix of size 12,797 x 12,797."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matchms.similarity import FingerprintSimilarityParallel\n",
     "\n",
-    "inchi = spectrums[11145].get(\"inchi\")\n",
-    "inchikey = mol_converter(inchi, \"inchi\", \"inchikey\")[:14]\n",
-    "print(inchikey)\n",
+    "similarity_measure = FingerprintSimilarityParallel(similarity_measure=\"jaccard\")\n",
+    "scores_mol_similarity = similarity_measure(spectrums, spectrums)\n",
     "\n",
-    "smiles = spectrums[11145].get(\"smiles\")\n",
-    "inchikey = mol_converter(smiles, \"smiles\", \"inchikey\")[:14]\n",
-    "print(inchikey)"
+    "#start 22:42 end 22:49\n",
+    "import numpy as np\n",
+    "filename = os.path.join(path_data, \"similarities_daylight2048_jaccard.npy\")\n",
+    "np.save(filename, scores_mol_similarity)"
    ]
   },
   {
@@ -422,85 +326,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'spectrum_id': 'CCMSLIB00000214104',\n",
-       " 'source_file': 'Massbank_ESI_positive_8_1_2014_peaks.mgf',\n",
-       " 'task': '2b0fcfed18d74148aa284e857bb00e4d',\n",
-       " 'scan': '-1',\n",
-       " 'ms_level': '2',\n",
-       " 'library_membership': 'MASSBANK',\n",
-       " 'spectrum_status': '1',\n",
-       " 'splash': 'splash10-0a4i-0009000000-0009000000',\n",
-       " 'submit_user': 'mwang87',\n",
-       " 'compound_name': 'FIO00351 Crystal violet',\n",
-       " 'ion_source': 'ESI',\n",
-       " 'compound_source': 'Isolated',\n",
-       " 'instrument': 'LC-ESI-QTOF',\n",
-       " 'pi': 'Putative Massbank Match',\n",
-       " 'data_collector': 'Massbank',\n",
-       " 'adduct': '[M+H]+',\n",
-       " 'precursor_mz': 408.221,\n",
-       " 'exactmass': '0.0',\n",
-       " 'charge': 1,\n",
-       " 'cas_number': '548-62-9',\n",
-       " 'pubmed_id': 'N/A',\n",
-       " 'smiles': '[Cl-1]',\n",
-       " 'inchi': 'InChI=1S/C25H30N3.ClH/c1-26(2)22-13-7-19(8-14-22)25(20-9-15-23(16-10-20)27(3)4)21-11-17-24(18-12-21)28(5)6;/h7-18H,1-6H3;1H/q+1;/p-1',\n",
-       " 'inchiaux': 'N/A',\n",
-       " 'library_class': '3',\n",
-       " 'spectrumid': 'CCMSLIB00000214104',\n",
-       " 'ionmode': 'positive',\n",
-       " 'create_time': '2014-08-01 16:31:38.0',\n",
-       " 'task_id': '2b0fcfed18d74148aa284e857bb00e4d',\n",
-       " 'user_id': 'null',\n",
-       " 'inchikey_smiles': 'VEXZGXHMUGYJMC-UHFFFAOYSA-M',\n",
-       " 'inchikey_inchi': 'ZXJXZNDDNMQXFV-UHFFFAOYSA-M',\n",
-       " 'formula_smiles': 'Cl-',\n",
-       " 'formula_inchi': 'C25H30ClN3',\n",
-       " 'url': 'https://gnps.ucsd.edu/ProteoSAFe/gnpslibraryspectrum.jsp?SpectrumID=CCMSLIB00000214104',\n",
-       " 'annotation_history': [{'Compound_Name': 'Massbank:FIO00351 Crystal violet',\n",
-       "   'Ion_Source': 'ESI',\n",
-       "   'Compound_Source': 'Isolated',\n",
-       "   'Instrument': 'LC-ESI-QTOF',\n",
-       "   'PI': 'Putative Massbank Match',\n",
-       "   'Data_Collector': 'Massbank',\n",
-       "   'Adduct': '[M+H]+',\n",
-       "   'Scan': '-1',\n",
-       "   'Precursor_MZ': '408.221',\n",
-       "   'ExactMass': '0.0',\n",
-       "   'Charge': '1',\n",
-       "   'CAS_Number': '548-62-9',\n",
-       "   'Pubmed_ID': 'N/A',\n",
-       "   'Smiles': '[Cl-1]',\n",
-       "   'INCHI': '1S/C25H30N3.ClH/c1-26(2)22-13-7-19(8-14-22)25(20-9-15-23(16-10-20)27(3)4)21-11-17-24(18-12-21)28(5)6;/h7-18H,1-6H3;1H/q+1;/p-1',\n",
-       "   'INCHI_AUX': 'N/A',\n",
-       "   'Library_Class': '3',\n",
-       "   'SpectrumID': 'CCMSLIB00000214104',\n",
-       "   'Ion_Mode': 'Positive',\n",
-       "   'create_time': '2014-08-01 16:31:38.0',\n",
-       "   'task_id': '2b0fcfed18d74148aa284e857bb00e4d',\n",
-       "   'user_id': 'mwang87'}],\n",
-       " 'parent_mass': 407.2137235480092,\n",
-       " 'inchikey': 'ZXJXZNDDNMQXFV-UHFFFAOYSA-M',\n",
-       " 'fingerprint': array([0, 0, 0, ..., 0, 0, 0])}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spectrums[11145].metadata"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -511,11 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectrums = [add_fingerprint(s, fingerprint_type=\"daylight\", nbits=2048) for s in spectrums]"
+    "spectrums = [add_fingerprint(s, fingerprint_type=\"morgan3\", nbits=2048) for s in spectrums]"
    ]
   },
   {
@@ -527,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
