--- a/notebooks/iomega-workflow2-split_data_into_subsets.ipynb
+++ b/notebooks/iomega-workflow2-split_data_into_subsets.ipynb
@@ -11,15 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "\n",
-    "ROOT = os.path.dirname(os.getcwd())\n",
-    "path_data = os.path.join(ROOT, 'data')"
+    "#ROOT = os.path.dirname(os.getcwd())\n",
+    "#path_data = os.path.join(ROOT, 'data')\n",
+    "path_data = \"C:\\\\OneDrive - Netherlands eScience Center\\\\Project_Wageningen_iOMEGA\\\\matchms\\\\data\""
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -42,6 +43,54 @@
     "\n",
     "filename = os.path.join(path_data,'gnps_all_cleand_by_matchms_and_pubchem_lookups.json')\n",
     "reference_spectrums = load_from_json(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspect status of annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of spectra: 154820\n",
+      "Inchis: 128103 -- 17620 unique\n",
+      "Smiles: 128052 -- 23097 unique\n",
+      "Inchikeys: 128042 -- 14978 unique (first 14 characters)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_annotations(spectra):\n",
+    "    inchi_lst = []\n",
+    "    smiles_lst = []\n",
+    "    inchikey_lst = []\n",
+    "    for i, spec in enumerate(spectra):\n",
+    "        inchi_lst.append(spec.get(\"inchi\"))\n",
+    "        smiles_lst.append(spec.get(\"smiles\"))\n",
+    "        inchikey = spec.get(\"inchikey\")\n",
+    "        if inchikey is None:\n",
+    "            inchikey = spec.get(\"inchikey_inchi\")\n",
+    "        inchikey_lst.append(inchikey)\n",
+    "\n",
+    "    inchi_count = sum([1 for x in inchi_lst if x])\n",
+    "    smiles_count = sum([1 for x in smiles_lst if x])\n",
+    "    inchikey_count = sum([1 for x in inchikey_lst if x])\n",
+    "    print(\"Inchis:\", inchi_count, \"--\", len(set(inchi_lst)), \"unique\")\n",
+    "    print(\"Smiles:\", smiles_count, \"--\", len(set(smiles_lst)), \"unique\")\n",
+    "    print(\"Inchikeys:\", inchikey_count, \"--\", \n",
+    "          len(set([x[:14] for x in inchikey_lst if x])), \"unique (first 14 characters)\")\n",
+    "    \n",
+    "print(\"Number of spectra:\", len(reference_spectrums))\n",
+    "count_annotations(reference_spectrums)"
    ]
   },
   {
@@ -77,26 +126,6 @@
     }
    ],
    "source": [
-    "def count_annotations(spectra):\n",
-    "    inchi_lst = []\n",
-    "    smiles_lst = []\n",
-    "    inchikey_lst = []\n",
-    "    for i, spec in enumerate(spectra):\n",
-    "        inchi_lst.append(spec.get(\"inchi\"))\n",
-    "        smiles_lst.append(spec.get(\"smiles\"))\n",
-    "        inchikey = spec.get(\"inchikey\")\n",
-    "        if inchikey is None:\n",
-    "            inchikey = spec.get(\"inchikey_inchi\")\n",
-    "        inchikey_lst.append(inchikey)\n",
-    "\n",
-    "    inchi_count = sum([1 for x in inchi_lst if x])\n",
-    "    smiles_count = sum([1 for x in smiles_lst if x])\n",
-    "    inchikey_count = sum([1 for x in inchikey_lst if x])\n",
-    "    print(\"Inchis:\", inchi_count, \"--\", len(set(inchi_lst)), \"unique\")\n",
-    "    print(\"Smiles:\", smiles_count, \"--\", len(set(smiles_lst)), \"unique\")\n",
-    "    print(\"Inchikeys:\", inchikey_count, \"--\", \n",
-    "          len(set([x[:14] for x in inchikey_lst if x])), \"unique (first 14 characters)\")\n",
-    "    \n",
     "print(\"Number of spectra:\", len(reference_spectrums_positive))\n",
     "count_annotations(reference_spectrums_positive)"
    ]
